--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
   },
   "homepage": "https://github.com/hakatashi/chars#readme",
   "devDependencies": {
+    "chai": "^3.4.1",
+    "gulp": "^3.9.0",
+    "gulp-livescript": "^3.0.0",
+    "gulp-mocha": "^2.2.0",
+    "livescript": "^1.4.0",
     "mocha": "^2.3.4"
   }
 }
