--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "homepage": "https://github.com/hakatashi/chars#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
     "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.1",
     "gulp-livescript": "^3.0.0",
     "gulp-mocha": "^2.2.0",
     "livescript": "^1.4.0",
