--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mocha": "^2.3.4"
   },
   "dependencies": {
+    "array-from": "^2.0.2",
     "general-category": "^1.1.0",
     "xtend": "^4.0.1"
   }
