--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "mocha": "^2.3.4"
   },
   "dependencies": {
-    "array-from": "^2.0.2",
+    "core-js": "^2.0.3",
     "general-category": "^1.1.0",
     "xtend": "^4.0.1"
   }
