--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mocha": "^2.3.4"
   },
   "dependencies": {
+    "array-unique": "^0.2.1",
     "core-js": "^2.0.3",
     "general-category": "^1.1.0",
     "xtend": "^4.0.1"
