fix: Remove v0.12 from test list
BREAKING CHANGE: Node.js v0.12 support will be discarded

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
-  - '0.12'
-  - '4'
-  - 'node'
+  - 4
+  - 6
+  - node
 notifications:
   webhooks: http://webhook.hakatashi.com/travis
